# smarter-hash

./: Cargo.toml  README.md
macros/: Cargo.toml
src/: impls.rs  lib.rs  traits.rs  utils.rs
src/impls/: boxed.rs  compact_str.rs  cow.rs  indexmap.rs  integral.rs  maps.rs  result.rs  seq.rs  string.rs  tuple.rs  vec.rs
src/traits/: macros.rs  stable_hash.rs  stable_hasher.rs
