[package]
name = "more-stable-hash"
version = "0.1.0"
edition = "2021"

[dependencies]
compact_str = { version = "0.8.0", optional = true, default-features = false }
indexmap = { version = "2.4.0", default-features = false, features = ["std"], optional = true }
serde = { version = "1.0.208", default-features = false, optional = true }

[features]
default = ["compact_str", "indexmap"]
compact_str = ["dep:compact_str"]
serde = ["dep:serde"]
indexmap = ["dep:indexmap"]
